refactor models. read esi from models instead of tasks. group tasks.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "phin": "^3.6.1",
-    "pug": "2.0.0-beta11",
+    "pug": "^3.0.1",
     "utf8": "^3.0.0"
   }
 }
